--- a/styles.css
+++ b/styles.css
@@ -362,11 +362,11 @@ textarea {
 	resize: vertical;
 }
 
-#form-submit {
+/* #form-submit {
 	text-align: center;
 	width: 100%;
 	margin: auto;
-}
+} */
 /* footer */
 .logo-social {
 	text-decoration: none;
