--- a/styles.css
+++ b/styles.css
@@ -328,6 +328,9 @@ form {
 	max-width: 420px;
 	margin: 50px auto;
 }
+#form-submit {
+	width: 100%;
+}
 .form-header {
 	text-align: center;
 	color: wheat;
