--- a/styles.css
+++ b/styles.css
@@ -288,6 +288,31 @@ header {
 .containerSkill:last-child {
 	margin-top: 1rem;
 }
+.modal-closed {
+	display: none;
+}
+.modal-active {
+	width: 50%;
+	height: 50%;
+	margin: auto;
+	position: fixed;
+	top: 1%;
+	left: 25%;
+	z-index: 1990;
+	background-size: contain;
+	background-repeat: no-repeat;
+	border-radius: 1rem;
+}
+.modal-button {
+	font-size: 2rem;
+	float: left;
+	z-index: 2000;
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	background-color: transparent;
+	color: wheat;
+}
 @media only screen and (min-width: 766px) {
 	.button-right,
 	.button-left,
